prevented large portrait images from overflowing on certain resolutions

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -808,7 +808,7 @@
 .large-portrait {
   border: 10px solid white;
   @include box-shadow(1px 1px 2px 1px rgba(0, 0, 0, 0.15));
-  width: 322px;
+  width: 100%;
   height: 241px;
   background-size: cover;
   float: left;
